thunderbird 60.3.2 - added ship graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.2.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.2.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "BkL-ovevRRmxmFk-sTv5jA"
+                ],
+                [
+                    "ship",
+                    "Rzx37VmsRpi1z4DKFhobgA"
                 ]
             ],
             "human_tasks": [
