thunderbird 60.3.3 - added push graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.3.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.3.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "fCIbiAIOT86QFxOCEzMQOQ"
+                ],
+                [
+                    "push",
+                    "C0q1Ut1XSY2by4PBJQ2rCw"
                 ]
             ],
             "human_tasks": [
