firefox 64.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-64.0rc.json
+++ b/inflight/firefox/firefox-release-rc-64.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "ZRkBNeNWR0SElGpn_ej_gg"
+                ],
+                [
+                    "ship_rc",
+                    "XyDhpKq_R8203bCdk_HC4w"
                 ]
             ],
             "human_tasks": [
