--- a/inflight/firefox/firefox-release-rc-64.0rc.json
+++ b/inflight/firefox/firefox-release-rc-64.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "G5CGnYV7QfW-YaFu-c4eiQ"
+                ],
+                [
+                    "ship_rc",
+                    "cnV9dS3nQZ-NGfLZPDPLBg"
                 ]
             ],
             "human_tasks": [
