--- a/inflight/firefox/firefox-release-rc-64.0rc.json
+++ b/inflight/firefox/firefox-release-rc-64.0rc.json
@@ -64,7 +64,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1512733",
+                    "description": "Partner repack signing job (YSTD4UBcQgOzctUt4ObBKw) failed due to CoT, which was ultimately from not being able to find a missing artifact from a successful repack job (WxeF9Z_eTYyN5yE8VSL3nQ) - See also Bug 1512732",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
+                }
+            ]
         },
         {
             "aborted": true,
