firefox 64.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-64.0rc.json
+++ b/inflight/firefox/firefox-release-rc-64.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "AhRzGGkrQ1yNq1YaomBESg"
+                ],
+                [
+                    "ship_rc",
+                    "HMHb_s4NTFuQtQOaB_U8RQ"
                 ]
             ],
             "human_tasks": [
