firefox 64.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-64.0rc.json
+++ b/inflight/firefox/firefox-release-rc-64.0rc.json
@@ -69,7 +69,7 @@
                     "bug": "none",
                     "description": "Partner Repack job for windows failed, without a good idea on why (Pw1Emrr0QnKuUnVispKJmg) reran",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
